// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cloudy scene > matches snapshot 1`] = `
"            .-~~~-.                                  
      .- ~ ~-(       )- ~                            
     /                     \\      .-~~~-.           
    |                       |.- ~-(       )- ~       
     \\                     /                  \\    
       ~- . _____ . -~      \\                /     
                               ~- . ___ . -~        
           ( _ _._                                   
          |_|-'_~_\`-._                              
       .-'-_~_-~_-~-_\`-._                           
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     
   | []  []   ___   []  [] |_._._._._.               
   |_________|___|__________|=|=|=|=|=|              "
`;

exports[`fog scene > matches snapshot 1`] = `
" = = = = = = = = = = = = = = = = = = = = = =       
   - - - - - - - - - - - - - - - - - - - -         
 = = = = = = = = = = = = = = = = = = = = = =       
   - - - - - - - - - - - - - = = = = = = = =       
 = = = = = = = = = = = = = = = = = = = = = =       
   - - - - - - - - - - - - - - - - - - - -         
 = = = = = = = = = = = = = = = = = = = = = =       
           ( _ _._                                   
          |_|-'_~_\`-._                              
       .-'-_~_-~_-~-_\`-._                           
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     
   | []  []   ___   []  [] |_._._._._.               
   |_________|___|__________|=|=|=|=|=|              "
`;

exports[`night-clear scene > matches snapshot 1`] = `
"    .    +        .    *        .       +            
         .    _.._      .          +        .        
   +       .' .-'\`    *      .        *             
    .     /  /    +       .       .        +         
      *  |  |        .       +         .             
    .     \\  \\   +      *        .          *      
       +  '._'-._ .        .    +       .           
    .      ( _ _._      +         .   *    +         
     +    |_|-'_~_\`-._     .   +      .              
   .   .-'-_~_-~_-~-_\`-._        .          +       
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     
   | []  []   ___   []  [] |_._._._._.               
   |_________|___|__________|=|=|=|=|=|              "
`;

exports[`rain scene > matches snapshot 1`] = `
"            .-~~~-.                                  
      .- ~ ~-(       )- ~       .-~~~-.             
     /                     \\.- ~-(       )- ~      
    |   | , |  , | ,    |  |                  \\   
     \\    ,  |  ,|    / \\                /   
       ~- . _____ . -~       ~- . ___ . -~         
      ,  |  ,  |  ,  |  , |  ,  |  ,  |  ,         
    |  ,  |  ,(  _ _._  |  ,  |  ,  |  ,           
      ,  |  , |_|-'_~_\`-._  ,  |  ,  |  ,             
    |  ,  |.-'-_~_-~_-~-_\`-._  |  ,  |  ,         
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     
   | []  []   ___   []  [] |_._._._._.               
   |_________|___|__________|=|=|=|=|=|              "
`;

exports[`snow scene > matches snapshot 1`] = `
"            .-~~~-.                                  
      .- ~ ~-(       )- ~       .-~~~-.             
     /                     \\.- ~-(       )- ~      
    |                       |                  \\   
     \\                     / \\                /   
       ~- . _____ . -~       ~- . ___ . -~         
     *    .   *    .   *   .    *    .   *          
       .    *   .( _ _._   .    *  .    .           
     *   .   * |_|-'_~_\`-._   *    .  *            
       .   * .-'-_~_-~_-~-_\`-._  .    *   .       
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     
   | []  []   ___   []  [] |_._._._._.               
   |_________|___|__________|=|=|=|=|=|              "
`;

exports[`sunny scene > matches snapshot 1`] = `
"       \\   |   /                                    
        .---.                                        
     --( o o )--                                     
        \`---'            .-~~~-.                     
       /   |   \\   .- ~ ~-(       )- ~              
                   /                     \\           
                          ~                            
           ( _ _._                                   
          |_|-'_~_\`-._                              
       .-'-_~_-~_-~-_\`-._                           
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     
   | []  []   ___   []  [] |_._._._._.               
   |_________|___|__________|=|=|=|=|=|              "
`;

exports[`thunder scene > matches snapshot 1`] = `
"            .-~~~-.                                  
      .- ~ ~-(       )- ~       .-~~~-.             
     /            /\\      \\.- ~-(       )- ~      
    |             \\ \\      |                  \\  
     \\            / /     / \\                /    
       ~- . _____/ /. -~    ~- . ___ . -~          
      ,  |  , / /  |  , |  ,  |  ,  |  ,           
    |  ,  |  *  ,(  _ _._  |  ,  |  ,  |           
      ,  |  ,  |_|-'_~_\`-._  ,  |  ,  |           
    |  ,  |.-'-_~_-~_-~-_\`-._  |  ,  |  ,         
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     
   | []  []   ___   []  [] |_._._._._.               
   |_________|___|__________|=|=|=|=|=|              "
`;
